<resources>
    <string name="app_name">Realfree</string>
    <string name="app_title">OLX бесплатно</string>
    <string name="search_adv">Поиск по рубрикам</string>
    <string name="hobbies_leisure">Хобби и отдых</string>
    <string name="home_garden">Дом и сад</string>
    <string name="transport_parts">Запчасти для транспорта</string>
    <string name="electronics">Электроника</string>
    <string name="business_services">Бизнес и услуги</string>
    <string name="fashion_style">Мода и стиль</string>
    <string name="favourite_adv">Избранные обьявления</string>
    <string name="favourite_search">Мои интересы</string>
    <string name="buttonOk">OK</string>
    <string name="textViewMonitor">Выберите одну или несколько рубрик для того, чтобы мониторить бесплатные обьявления и получать сообщения на телефон</string>
    <string name="world_of_children">Детский мир</string>
    <string name="zooproduct">Зоопродукты</string>
</resources>