<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/action_search"
    app:showAsAction="always"
    android:icon="@drawable/baseline_search_white_24"
    android:title="@string/search_adv" />
    <item
        android:id="@+id/favourite_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_favourite_search"
        android:title="@string/favourite_search"></item>
    <item
        android:id="@+id/favourite_adv"
        app:showAsAction="always"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite_adv"></item>
    <item
        android:id="@+id/clear"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_clear_24"
        android:title="@string/favourite_adv"></item>

</menu>