<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:background="@color/background"
    android:orientation="vertical"
    android:textAlignment="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/my_chip_group"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacing="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
              >

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_garden"
            style="@style/Chip"
            android:text="@string/home_garden"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/electronics"
            style="@style/Chip"
            android:text="@string/electronics"
            app:layout_constraintTop_toBottomOf="@id/chip_home_garden"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/transport_parts"
            style="@style/Chip"
            android:text="@string/transport_parts"
            app:layout_constraintTop_toBottomOf="@id/electronics"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/business_services"
            style="@style/Chip"
            android:text="@string/business_services"
            app:layout_constraintTop_toBottomOf="@+id/transport_parts"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fashion_style"
            style="@style/Chip"
            android:text="@string/fashion_style"
            app:layout_constraintTop_toBottomOf="@+id/business_services"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hobbies_leisure"
            style="@style/Chip"
            android:text="@string/hobbies_leisure"

            app:layout_constraintTop_toBottomOf="@+id/fashion_style"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>