<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:background="@color/background"
    android:orientation="vertical"
    android:textAlignment="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/my_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        app:chipSpacing="25dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:singleSelection="false"
        tools:ignore="MissingConstraints">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_garden"
            style="@style/ChipChange"
            android:text="@string/home_garden"

            app:checkedIconEnabled="true"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/electronics"
            style="@style/ChipChange"
            android:text="@string/electronics"

            app:checkedIconEnabled="true"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/transport_parts"
            style="@style/ChipChange"
            android:text="@string/transport_parts"

            app:checkedIconEnabled="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/business_services"
            style="@style/ChipChange"
            android:text="@string/business_services"

            app:checkedIconEnabled="true"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fashion_style"
            style="@style/ChipChange"
            android:text="@string/fashion_style"

            app:checkedIconEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/business_services"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hobbies_leisure"
            style="@style/ChipChange"
            android:text="@string/hobbies_leisure"

            app:checkedIconEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/fashion_style"
            tools:ignore="MissingConstraints" />


    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/buttonChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewMonitor"
        style="@style/TextViewAdvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>